force-app/main/default/objects/BTTS_InputData__x/BTTS_InputData__x.object-meta.xml
<CustomObject>
    <externalDataSource>BestTimeToCall</externalDataSource>
    <externalName>BTTC_InputData_R4Demo</externalName>
    <label>BTTS_InputData</label>
    <pluralLabel>BTTS_InputDatas</pluralLabel>
</CustomObject>