force-app/main/default/objects/BTTS_InputData__x/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <label>CustomerName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>