force-app/main/default/objects/BTTS_InputData__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>