force-app/main/default/objects/BTTS_InputData__x/fields/PatientDOB__c.field-meta.xml
<CustomField>
    <fullName>PatientDOB__c</fullName>
    <label>PatientDOB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>