force-app/main/default/objects/BTTS_InputData__x/fields/PatientGender__c.field-meta.xml
<CustomField>
    <fullName>PatientGender__c</fullName>
    <label>PatientGender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>